--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,18 @@ ul {
 .burger-nav.active {
   transform: translateX(0);
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background-color: #393c41;
+  box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+  min-height: 40px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: rgba(255, 255, 255, 0.144);
+  box-shadow: inset 0 0 6px rgb(103 58 183 / 12%);
+}
